--- a/web-1/exercise-one/index.html
+++ b/web-1/exercise-one/index.html
@@ -8,7 +8,7 @@
         <h1 class="title">&#x1F37A;Sarah Paynter&#x1F459;</h1>
         <h2 class="title">She/Her He/Him</h2>
             <li> 
-            <a href="exercise-two/index.html"> Exercise Two - Containers </a>
+            <a href="directory/index.html"> Directory </a>
             </li>
         <p>
             Silly and queer, someone get me a beer! I like terrible beer (but not <strong>that</strong> terrible),
