--- a/web-1/index.html
+++ b/web-1/index.html
@@ -5,8 +5,8 @@
         <title>Title</title>
     </head>
     <body>
-    <h1>Sarah Paynter Directory</h1>
-        <p> Directory to links</p>
+    <h1>Sarah Paynter's Directory</h1>
+        <p> What it says on the tin</p>
         <hr/>
         <h2>Directory</h2>
         <ul> 
