--- a/web-1/exercise-two/index.html
+++ b/web-1/exercise-two/index.html
@@ -9,7 +9,7 @@
         
         <!-- Navigation Bar -->
         <div>
-            <img src="assets/site-logo.png" height="15px" alt="Placeholder site logo, to be updated">
+            <img src="assets/yugioh.jpg" height="25px" alt="A sweet yugioh duel">
             <!-- Navigation Buttons -->
             <nav>
                 <a href="">Directory</a>
