--- a/web-1/exercise-one/index.html
+++ b/web-1/exercise-one/index.html
@@ -8,7 +8,8 @@
         <h1 class="title">&#x1F37A;Sarah Paynter&#x1F459;</h1>
         <h2 class="title">She/Her He/Him</h2>
             <li> 
-            <a href="directory/index.html"> Directory </a>
+            <a href="../index.html"> Directory </a>
+            <a href="exercise-two/index.html"> Exercise Two - Containers</a>
             </li>
         <p>
             Silly and queer, someone get me a beer! I like terrible beer (but not <strong>that</strong> terrible),
@@ -28,8 +29,8 @@
             <li> Swimming</li>
             <li> History</li>
         </ul>
-        <img src="https://github.com/beerbunny-jpg/web-1/blob/main/godsown.png" alt="A Lesbian" width="500" height="500"> 
+        <img src="assets/godsown.png" alt="A Lesbian" width="500" height="500"> 
         <p> Now, enough about me... <br> Look at <br> these super cool <br> dogs...</p>
-         <img src="https://github.com/beerbunny-jpg/web-1/blob/main/extremeboys.png" alt="Cool As Fuck Dogs" width="538" height="378"> 
+         <img src="assets/extremeboys.png" alt="Cool As Fuck Dogs" width="538" height="378"> 
             </body>
 </html>
