--- a/web-1/exercise-two/index.html
+++ b/web-1/exercise-two/index.html
@@ -9,11 +9,11 @@
         
         <!-- Navigation Bar -->
         <div>
-            <img src="assets/yugioh.jpg" height="25px" alt="A sweet yugioh duel">
+            <img src="assets/yugioh.jpg" height="60px" alt="A sweet yugioh duel">
             <!-- Navigation Buttons -->
             <nav>
-                <a href="">Directory</a>
-                <a href="">About</a>
+                <a href="../index.html">Directory</a>
+                <a href="exercise-one/index.html">About</a>
             </nav>
         </div>
         
