--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li> <a href="exercise-two/index.html"> Exercise Two - Containers</a></li>
             <li> <a href="assignment-1/index.html"> Assignment 1 </a> </li>
             <li> <a href="assignment-2/"> Assignment 2 </a></li>
-        
+            <li> <a href="box-model/box.html"> Box Model </a></li>
         
         </ul>
     </body>
