--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li> <a href="assignment-1/index.html"> Assignment 1 </a> </li>
             <li> <a href="assignment-2/"> Assignment 2 </a></li>
             <li> <a href="box-model/box.html"> Box Model </a></li>
-        
+            <li> <a href="css-image-assignment/"> Image Assignment </a></li>
         </ul>
     </body>
 </html>
