--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li> <a href="assignment-2/"> Assignment 2 </a></li>
             <li> <a href="box-model/box.html"> Box Model </a></li>
             <li> <a href="css-image-assignment/"> Image Assignment </a></li>
+            <li> <a href="float-assignment/index.html"> Float Assignment </a></li>
         </ul>
     </body>
 </html>
