--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <div class="float-assignment"> 
         <a href="float-assignment/index.html"> Float Assignment </a>
         </div>
+        
+        <div class="review-web-1"> 
+        <a href="review-web-1/index.html"> Web 1 Review - January 2025</a></div>
     
     </body>
 </html>
