--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
         <div class="figma-to-code"> 
         <a href="figma-to-code/index.html"> Figma To Code </a></div>
         
+          <div class="figma-to-code"> 
+        <a href="figma-to-css-2/index.html"> Figma To CSS Samples </a></div>
+        
     </body>
 </html>
