--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
           <div class="figma-to-code"> 
         <a href="figma-to-css-2/index.html"> Figma To CSS Samples </a></div>
         
+           <div class="figma-to-code"> 
+        <a href="breakpoints/index.html"> Breakpoints </a></div>
+        
     </body>
 </html>
