--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         
            <div class="figma-to-code"> 
         <a href="breakpoints/index.html"> Breakpoints </a></div>
+
+        <div class="portfolio"> 
+        <a href="sarahpaynterportfolio/index.html"> Portfolio and Figma - Web II Final Assignment </a></div>
         
     </body>
 </html>
